tests/ui/associated-type-bounds/suggest-assoc-ty-bound-on-eq-bound.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/suggest-assoc-ty-bound-on-eq-bound.rs:4:24
   |
LL | fn f(_: impl Trait<T = Copy>) {}
   |                        ^^^^
   |
help: you might have meant to write a bound here
   |
LL | fn f(_: impl Trait<T: Copy>) {}
   |                     ~

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/suggest-assoc-ty-bound-on-eq-bound.rs:8:24
   |
LL | fn g(_: impl Trait<T = std::fmt::Debug + Eq>) {}
   |                        ^^^^^^^^^^^^^^^^^^^^
   |
help: you might have meant to write a bound here
   |
LL | fn g(_: impl Trait<T: std::fmt::Debug + Eq>) {}
   |                     ~

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/suggest-assoc-ty-bound-on-eq-bound.rs:12:26
   |
LL | fn h(_: impl Trait<T<> = 'static + for<'a> Fn(&'a ())>) {}
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add `dyn` keyword before this trait
   |
LL | fn h(_: impl Trait<T<> = dyn 'static + for<'a> Fn(&'a ())>) {}
   |                          +++
help: you might have meant to write a bound here
   |
LL | fn h(_: impl Trait<T<>: 'static + for<'a> Fn(&'a ())>) {}
   |                       ~

error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/suggest-assoc-ty-bound-on-eq-bound.rs:18:26
   |
LL | type Obj = dyn Trait<T = Clone>;
   |                          ^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0782`.
